--- a/assets/css/scss/objects/_layout.scss
+++ b/assets/css/scss/objects/_layout.scss
@@ -293,4 +293,8 @@
 .container {
 	@include container();
 	padding: 0 $pad;
+
+	@include susy-media(1200px) {
+		padding: 0;
+	}
 }
