--- a/assets/css/scss/objects/_nav.scss
+++ b/assets/css/scss/objects/_nav.scss
@@ -6,7 +6,7 @@
 	clear: both;
 	overflow: hidden;
 	max-height: 0;
-	margin-top: $space;
+	margin-top: 1em;
 
 	a {
 		display: block;
