--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,7 +58,7 @@ So feel free to use any of these approaches. Or don't. It's totally up to you.
 $susy: (
     columns: 12,
     gutters: 1/2,
-    container: 1120px,
+    container: 1200px,
     global-box-sizing: border-box
     );
 
